feat: 添加 ensure-i18n 模式以自动配置国际化服务
- 添加 ensure-i18n 模式，用于在项目中自动配置i18n服务和管道
- 在replace模式完成后自动运行ensure-i18n以确保正确配置
- 优化 ensureAngularFiles 函数，支持自动配置 app.config.ts 和 app.component.ts
- 修复 TypeScript 类型错误
- 更新工具以正确解析 ensure-i18n 模式参数

--- a/omrp.config.json
+++ b/omrp.config.json
@@ -2,7 +2,7 @@
   "serviceTypeName": "I18nLocaleService",
   "serviceVariableName": "i18n",
   "getLocalMethod": "getLocale",
-  "dictDir": "src2/app/i18n",
+  "dictDir": "src/app/i18n",
   "languages": [
     "zh",
     "en"
@@ -10,8 +10,8 @@
   "jsonOutDir": "report",
   "jsonArrayMode": "nested",
   "ensureAngular": "fix",
-  "dir": "src2",
-  "dryRun": true,
+  "dir": "src",
+  "dryRun": false,
   "logLevel": "info",
   "format": "pretty"
 }
